frontend/test/should_pass/nameof_002.grg
using stringnode;

rule r {
	x : StringNode;

	modify {
		eval {
			nameof(x) = "foo" + nameof(x);
			nameof() = "foo" + nameof();
		}
	}
}

