frontend/test/should_fail/exectype_VFree.grg
using exectype;

rule r
{
	modify  {
		exec(i:foo=foo::Bla && {vfree(i)});
	}
}